# ESP32-BT-GAMEPAD

./: Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
docs/: README.md
src/: config.rs  main.rs
src/bluetooth/: gamepad.rs
src/display/: games.rs  menu.rs  mod.rs  settings.rs  welcome.rs
src/games/: debug.rs  mod.rs  snake.rs
src/input/: buttons.rs  joysticks.rs  mod.rs
